# tkfplaygroundpy

./: .gitignore  .travis.yml  DEVELOPMENT.rst  Makefile  README.rst  setup.cfg  tox.ini
ci/: test-upload
ci/test-upload/: tox.ini
opt/: clean.mk  pypi.mk  tox.mk
src/tkfplaygroundpy/: __init__.py
src/tkfplaygroundpy/tests/: test_core.py
