[metadata]

name = tkfplaygroundpy
version = attr: tkfplaygroundpy.__version__
description = My Python packaging playground
long_description = file: README.rst
# url = https://github.com/tkf/tkfplaygroundpy
# project_urls =
#     Tracker=https://github.com/tkf/tkfplaygroundpy/issues

author = Takafumi Arakaki
author_email = aka.tkf@gmail.com

# SPDX short identifier:
license = MIT
license_file = LICENSE
# keywords =
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    # see: http://pypi.python.org/pypi?%3Aaction=list_classifiers

[options]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#using-a-src-layout
package_dir =
    =src
packages = find:
# zip_safe = False
install_requires =
    packaging

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
#    PROGRAM_NAME=tkfplaygroundpy.cli:main

[bdist_wheel]
universal = 1  # built wheel is Python 2/3 compatible

[tool:isort]
known_first_party = tkfplaygroundpy
default_section = THIRDPARTY

# Black-compatible setting.  See: https://github.com/ambv/black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
